# cassandra-gemini-mcp

./: .gitignore  .woodpecker.yaml  CLAUDE.md  README.md
backend/: Dockerfile  pyproject.toml
backend/src/cassandra_gemini_mcp/: config.py  main.py  mcp_server.py
backend/src/cassandra_gemini_mcp/clients/: gemini.py
backend/src/cassandra_gemini_mcp/tools/: __init__.py  _helpers.py  research.py
